Figured out the folder issue - no more css.map generating - working on Nav-bar - need to figure out spacing

--- a/styles/sass/partials/_base-styles.scss
+++ b/styles/sass/partials/_base-styles.scss
@@ -16,6 +16,11 @@ img {
     display: block;
 }
 
+i {
+    width: 100%;
+    display: block;
+}
+
 button {
     background-color: transparent;
     border: none;
