--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -32,10 +32,44 @@ h1,h2,h3,h4 {
     margin: 0;
 }
 
-// h1 {
-//     @include font-size(46);
-// }
+h1 {
+    @include fontSize(46);
+    text-transform: uppercase;
+    line-height: 24px;
+    letter-spacing: 1.1px;
+} //title-text//
 
-// h2 {
-//     @include font-size()
-// }
+h2 {
+    @include fontSize(24);
+    line-height: 36px;
+    letter-spacing: 0.6px;
+} //quotes//
+
+h3 {
+    @include fontSize(18);
+    line-height: 24px;
+    letter-spacing: 0.5px;
+} //footer-heading//
+
+h4 {
+@include fontSize(18);
+line-height: 36px;
+letter-spacing: 0.5px;
+}//body-style//
+
+h5 {
+    @include fontSize(13);
+    line-height: 44px;
+    letter-spacing: 0.3px;
+}//footing//
+
+p {
+    line-height: 24px;
+    letter-spacing: 0.3px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    transition: 0.3s;
+}
