--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -7,3 +7,4 @@ $primary: #2e2e2e;
 $secondary: #999999;
 $tertiary: #f6f6f6;
 $quaternary: #333333;
+$treegreen: #2e992a
