--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,8 @@ figure {
 }
 
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   height: 0;
   overflow: visible;
 }
@@ -139,7 +140,8 @@ fieldset {
 }
 
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   color: inherit;
   display: table;
   max-width: 100%;
@@ -157,7 +159,8 @@ textarea {
 }
 
 [type=checkbox], [type=radio] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
 }
 
@@ -200,11 +203,13 @@ template {
 }
 
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 .sr-only {
@@ -268,6 +273,54 @@ h1, h2, h3, h4 {
   margin: 0;
 }
 
+h1 {
+  font-size: 46px;
+  font-size: 2.3rem;
+  text-transform: uppercase;
+  line-height: 24px;
+  letter-spacing: 1.1px;
+}
+
+h2 {
+  font-size: 24px;
+  font-size: 1.2rem;
+  line-height: 36px;
+  letter-spacing: 0.6px;
+}
+
+h3 {
+  font-size: 18px;
+  font-size: 0.9rem;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+
+h4 {
+  font-size: 18px;
+  font-size: 0.9rem;
+  line-height: 36px;
+  letter-spacing: 0.5px;
+}
+
+h5 {
+  font-size: 13px;
+  font-size: 0.65rem;
+  line-height: 44px;
+  letter-spacing: 0.3px;
+}
+
+p {
+  line-height: 24px;
+  letter-spacing: 0.3px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
 .wrapper {
   max-width: 1289px;
   width: 90%;
@@ -285,6 +338,11 @@ img {
   display: block;
 }
 
+i {
+  width: 100%;
+  display: block;
+}
+
 button {
   background-color: transparent;
   border: none;
@@ -293,6 +351,52 @@ button {
 }
 
 .nav-bar {
-  background-image: url(/assets/home-1.jpeg);
+  background-image: url(../assets/home-1.jpeg);
   min-height: 100vh;
-}/*# sourceMappingURL=styles.css.map */
+  background-size: cover;
+  background-position: center;
+  padding: 0;
+}
+.nav-bar .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.nav-bar .search-cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.nav-bar .bag,
+.nav-bar .menu-icon {
+  padding: 10px 5px;
+}
+.nav-bar .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 400px;
+}
+.nav-bar .menu li {
+  padding: 20px 15px 0 15px;
+}
+.nav-bar .logo {
+  margin-top: 25px;
+}
+.nav-bar a {
+  line-height: 2.2rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.nav-bar a:hover, .nav-bar a:focus {
+  color: rgba(46, 153, 42, 0.6);
+}
